Added user parameter routes
